hopefully fix phone navbar issue of dark mode

--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -61,6 +61,19 @@ body.dark-mode .navbar {
     background-color: #1e1e1e !important;
     border-bottom: 1px solid #333;
 }
+body.dark-mode .navbar-collapse {
+    background-color: #1e1e1e !important;
+}
+body.dark-mode .navbar-toggler-icon {
+    background-color: #e0e0e0;
+}
+body.dark-mode .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+    background-color: transparent !important;
+}
+body.dark-mode .navbar-toggler-icon::before,
+body.dark-mode .navbar-toggler-icon::after {
+    background-color: #e0e0e0;
+}
 body.dark-mode .navbar-brand {
     color: #e0e0e0;
 }
